src/objects/OrderApi__Sales_Order_Line__c.object
<CustomObject>
    <description>Sales Order Lines track the Items associated with Sales Orders.</description>
    <fields>
        <fullName>AC_User_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Segment</label>
        <referenceTo>AC_User_Segment__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Tax_Deductible_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated/Override** (Unit Price * Quantity) - (Quantity * Item Cost) only applies to lines associated with items where &quot;Is Tax Deductible&quot; is checked.</description>
        <inlineHelpText>**System Calculated/Override** (Unit Price * Quantity) - (Quantity * Item Cost) only applies to lines associated with items where &quot;Is Tax Deductible&quot; is checked.</inlineHelpText>
        <label>Tax Deductible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Write_In__c</fullName>
        <label>Write In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Attendee.</description>
        <inlineHelpText>Link to related Attendee.</inlineHelpText>
        <label>Attendee</label>
        <referenceTo>EventApi__Attendee__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Event.</description>
        <inlineHelpText>Link to related Event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Required_Schedule_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the schedule item is required with ticket.</description>
        <inlineHelpText>When checked, the schedule item is required with ticket.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Schedule_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Schedule Item.</description>
        <inlineHelpText>Link to related Schedule Item.</inlineHelpText>
        <label>Schedule Item</label>
        <referenceTo>EventApi__Schedule_Item__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Sponsor_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Sponsor Package.</description>
        <inlineHelpText>Link to related Sponsor Package.</inlineHelpText>
        <label>Sponsor Package</label>
        <referenceTo>EventApi__Sponsor_Package__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Ticket Type.</description>
        <inlineHelpText>Link to related Ticket Type.</inlineHelpText>
        <label>Ticket Type</label>
        <referenceTo>EventApi__Ticket_Type__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required System Calculated Override ** Link to the Account that is assigned to the Sales Order Line -- valid if the linked &quot;Item&quot; &quot;Enable Assignments&quot; is checked, and the &quot;Entity&quot; is set to &quot;Account&quot;. Defaults to the Sales Order &quot;Account&quot;.</description>
        <inlineHelpText>** Conditionally Required System Calculated Override ** Link to the Account that is assigned to the Sales Order Line -- valid if the linked &quot;Item&quot; &quot;Enable Assignments&quot; is checked, and the &quot;Entity&quot; is set to &quot;Account&quot;. Defaults to the Sales Order &quot;Account&quot;</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Activation_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Active_Assignments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** System Calculated ** Number of Active Assignments. Valid and restricted to Items where &quot;Enable Assignments&quot; is checked. Defaults 0 if no Assignments found.</description>
        <inlineHelpText>** System Calculated ** Number of Active Assignments. Valid and restricted to Items where &quot;Enable Assignments&quot; is checked. Defaults 0 if no Assignments found.</inlineHelpText>
        <label>Active Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignments_Allowed__c</fullName>
        <description>** System Calculated ** If the Item &quot;Enable Assignments&quot; and &quot;Restrict Number of Assignments&quot; fields are checked, the Item &quot;Maximum Number of Assignments&quot; x the Line &quot;Quantity&quot; is set. Otherwise no value is set.</description>
        <formula>IF (  OrderApi__Item__r.OrderApi__Enable_Assignments__c &amp;&amp;  OrderApi__Item__r.OrderApi__Restrict_Number_of_Assignments__c ,   OrderApi__Item__r.OrderApi__Maximum_Number_of_Assignments__c *  OrderApi__Quantity__c  , IF ( NOT(OrderApi__Item__r.OrderApi__Restrict_Number_of_Assignments__c) &amp;&amp; OrderApi__Item__r.OrderApi__Enable_Assignments__c, null , null ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** If the Item &quot;Enable Assignments&quot; and &quot;Restrict Number of Assignments&quot; fields are checked, the Item &quot;Maximum Number of Assignments&quot; x the Line &quot;Quantity&quot; is set. Otherwise no value is set.</inlineHelpText>
        <label>Assignments Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignments_Available__c</fullName>
        <description>** System Calculated ** If the Item &quot;Restricts Number of Assignments&quot; then Assignments Allowed - Active Assignments is set. Otherwise the value is null.</description>
        <formula>IF (
OrderApi__Item__r.OrderApi__Enable_Assignments__c &amp;&amp;  OrderApi__Item__r.OrderApi__Restrict_Number_of_Assignments__c , OrderApi__Assignments_Allowed__c - OrderApi__Active_Assignments__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** If the Item &quot;Restricts Number of Assignments&quot; then Assignments Allowed - Active Assignments is set. Otherwise the value is null.</inlineHelpText>
        <label>Assignments Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Assign_Account_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a Auto Assign Rule set &quot;All Account Contacts&quot;</description>
        <inlineHelpText>Checked when a Auto Assign Rule set &quot;All Account Contacts&quot;</inlineHelpText>
        <label>Auto Assign Account Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Assign_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Auto Assignment Rule set to &quot;Contact&quot;</description>
        <inlineHelpText>Checked when Auto Assignment Rule set to &quot;Contact&quot;</inlineHelpText>
        <label>Auto Assign Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Assign_Rule__c</fullName>
        <description>Defines the Assignment creation rule for related Account or Contact.</description>
        <inlineHelpText>Defines the Assignment creation rule for related Account or Contact.</inlineHelpText>
        <label>Auto Assign Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>All Account Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When it is checked, assignment records will be created depending on &quot;Auto Assign Rule&quot;.</description>
        <inlineHelpText>When it is checked, assignment records will be created depending on &quot;Auto Assign Rule&quot;.</inlineHelpText>
        <label>Auto Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Calculate_Activation_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>** System Calculated Override ** Valid if the Sales Order Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</description>
        <inlineHelpText>** System Calculated Override ** Valid if the Sales Order Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</inlineHelpText>
        <label>Auto Calculate Activation Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Default value is mapped from the parent sales order. The Business Group controls what items are available to associate with the order line. If no value exists, all active items will be allowed to be associated.</description>
        <inlineHelpText>**System Calculated/Override** Default value is mapped from the parent sales order. The Business Group controls what items are available to associate with the order line. If no value exists, all active items will be allowed to be associated.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Shipping_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Default checked. Copies the shipping information from the sales order.</description>
        <inlineHelpText>Default checked. Copies the shipping information from the sales order.</inlineHelpText>
        <label>Calculate Shipping Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required System Calculated Override ** Link to the Contact who is the primary assignee of the Item purchased on the Sales Order Line. Required if &quot;Enable Assignments&quot; is checked on the related Item. Defaults to the Sales Order Contact.</description>
        <inlineHelpText>** Conditionally Required System Calculated Override ** Link to the Contact who is the primary assignee of the Item purchased on the Sales Order Line. Required if &quot;Enable Assignments&quot; is checked on the related Item. Defaults to the Sales Order Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Disable_Scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Scheduling is disabled for this line and the total is added as a line to the first installment.</description>
        <inlineHelpText>Scheduling is disabled for this line and the total is added as a line to the first installment.</inlineHelpText>
        <label>Disable Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Do_Not_Collect_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related Sales Order Line will not be added to the EPayment and Receipt. Customer will not be charged for this Sales Order Line.</description>
        <inlineHelpText>When checked, the related Sales Order Line will not be added to the EPayment and Receipt. Customer will not be charged for this Sales Order Line.</inlineHelpText>
        <label>Requires PreAuthorize Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the subscription will automatically attempt to renew itself by charging the related Payment Method. Defaults unchecked.</description>
        <inlineHelpText>When checked, the subscription will automatically attempt to renew itself by charging the related Payment Method. Defaults unchecked.</inlineHelpText>
        <label>Enable Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__End_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>** Conditionally Required ** Select &quot;Account&quot; to assign the Item on the Sales Order Line to the linked &quot;Account&quot; field -- otherwise select &quot;Contact&quot;. Defaults to the value of the same field on the Sales Order.</description>
        <inlineHelpText>** Conditionally Required ** Select &quot;Account&quot; to assign the Item on the Sales Order Line to the linked &quot;Account&quot; field -- otherwise select &quot;Contact&quot;. Defaults to the value of the same field on the Sales Order.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Required/Override** Link to the related GL Account.</description>
        <inlineHelpText>**System Calculated/Required/Override** Link to the related GL Account.</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Amendment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, related Sales Order Line is considered as &quot;Subscription Amendment&quot;</description>
        <inlineHelpText>When checked, related Sales Order Line is considered as &quot;Subscription Amendment&quot;.</inlineHelpText>
        <label>Is Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Installment_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Checked if sol type is installment and if the amount is Calculated.</description>
        <inlineHelpText>**System Calculated** Checked if sol type is installment and if the amount is Calculated.</inlineHelpText>
        <label>Is Installment Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Posted__c</fullName>
        <description>When checked all Invoices related to the Sales Order will post an receivable transaction to the GL.</description>
        <formula>OrderApi__Sales_Order__r.OrderApi__Is_Posted__c</formula>
        <inlineHelpText>When checked all Invoices related to the Sales Order will post an receivable transaction to the GL.</inlineHelpText>
        <label>Is Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, related Sales Order Line is considered as &quot;Subscription Renewal&quot;.</description>
        <inlineHelpText>When checked, related Sales Order Line is considered as &quot;Subscription Renewal&quot;.</inlineHelpText>
        <label>Is Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Required_Package_Item__c</fullName>
        <description>** System Calculated ** Checked when the sales order line is linked to a package item where &quot;Is Required&quot; is also checked.</description>
        <formula>OrderApi__Package_Item__r.OrderApi__Is_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** Checked when the sales order line is linked to a package item where &quot;Is Required&quot; is also checked.</inlineHelpText>
        <label>Is Required Package Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Shipping_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the Sales Order Line that is being used for shipping.</description>
        <inlineHelpText>Select the checkbox to have this Sales Order Line represent shipping.</inlineHelpText>
        <label>Is Shipping Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** Checked when the Sales Order Line is linked to a &quot;Subscription&quot; Item.</description>
        <inlineHelpText>** System Calculated ** Checked when the Sales Order Line is linked to a &quot;Subscription&quot; Item.</inlineHelpText>
        <label>Is Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the Sales Order Line that is being used for tax.</description>
        <inlineHelpText>Defines the Sales Order Line that is being used for tax.</inlineHelpText>
        <label>Is Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When an Item that requires certain options or assignments is linked to the line, the line is considered &quot;Invalid&quot; until all requirements are met. Defaults checked for Items with no requirements, otherwise defaults unchecked.</description>
        <inlineHelpText>When an Item that requires certain options or assignments is linked to the line, the line is considered &quot;Invalid&quot; until all requirements are met. Defaults checked for Items with no requirements, otherwise defaults unchecked.</inlineHelpText>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated / Override ** Link to the related Item Class.</description>
        <inlineHelpText>** System Calculated / Override ** Link to the related Item Class.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the item related to the sales order.</description>
        <inlineHelpText>Link to the item related to the sales order.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Line_Description__c</fullName>
        <description>Optional line description will be added to sales orders, invoices, receipts, and detailed customer statements. If blank, the value of this field will match the value of the related item&apos;s &quot;Line Description&quot; field.</description>
        <inlineHelpText>Optional line description will be added to sales orders, invoices, receipts, and detailed customer statements. If blank, the value of this field will match the value of the related item&apos;s &quot;Line Description&quot; field.</inlineHelpText>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__List_Price__c</fullName>
        <description>**System Calculated** The standard price for the item selected on the sales order line.</description>
        <formula>OrderApi__Item__r.OrderApi__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** The standard price for the item selected on the sales order line.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Package_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated / Conditionally Required ** Creates a relationship to the Package Item when the Sales Order Line is created as a result of purchasing the parent package item.</description>
        <inlineHelpText>** System Calculated / Conditionally Required ** Creates a relationship to the Package Item when the Sales Order Line is created as a result of purchasing the parent package item.</inlineHelpText>
        <label>Package Item</label>
        <referenceTo>OrderApi__Package_Item__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Required if a Subscription Item and Subscription Plan configuration has &quot;Require Valid Payment Method&quot; checked. The Payment Method must also be related to the purchasing/subscribing Account or Contact.</description>
        <inlineHelpText>** Conditionally Required ** Required if a Subscription Item and Subscription Plan configuration has &quot;Require Valid Payment Method&quot; checked. The Payment Method must also be related to the purchasing/subscribing Account or Contact.</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>OrderApi__Payment_Method__c</referenceTo>
        <relationshipName>Sales_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Overrides the calculation of price based on the most appropriate price for the purchasing customer. Default is unchecked.</description>
        <inlineHelpText>Overrides the calculation of price based on the most appropriate price for the purchasing customer. Default is unchecked.</inlineHelpText>
        <label>Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The price rule related to the sales order line. When added or changed, the unit price will reflect the price defined on the price rule.</description>
        <inlineHelpText>The price rule related to the sales order line. When added or changed, the unit price will reflect the price defined on the price rule.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>OrderApi__Price_Rule__c</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>**Conditionally Required** The quantity (number of units) of the item related to the sales order line. Required when an Item is linked that does not have &quot;Disable Price Rules&quot; checked. Default 1.</description>
        <inlineHelpText>**Conditionally Required** The quantity (number of units) of the item related to the sales order line. Required when an Item is linked that does not have &quot;Disable Price Rules&quot; checked. Default 1.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Required_Package_Items__c</fullName>
        <description>This field aggregates the total number of required package items needed to fulfill a sales order with this item.</description>
        <formula>OrderApi__Item__r.OrderApi__Required_Package_Items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field aggregates the total number of required package items needed to fulfill a sales order with this item.</inlineHelpText>
        <label>Required Package Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sale_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated/Override** The price per-unit for the item sold on the sales order line.</description>
        <inlineHelpText>**System Calculated/Override** The price per-unit for the item sold on the sales order line.</inlineHelpText>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Order Lines that link to &quot;Package&quot; Items will include the Items into the Sales Order as new Sales Order Lines which will have a parent/child relationship with the Sales Order Line that links to the &quot;Package&quot; Item.</description>
        <inlineHelpText>Sales Order Lines that link to &quot;Package&quot; Items will include the Items into the Sales Order as new Sales Order Lines which will have a parent/child relationship with the Sales Order Line that links to the &quot;Package&quot; Item.</inlineHelpText>
        <label>Parent Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Packaged Items</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <description>**Required** All Sales Order Lines require a linked Sales Order.</description>
        <inlineHelpText>**Required** All Sales Order Lines require a linked Sales Order.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_City__c</fullName>
        <description>Optional shipping city for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &quot;Shipping City&quot; field.</description>
        <inlineHelpText>Optional shipping city for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &quot;Shipping City&quot; field.</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Contact__c</fullName>
        <description>Optional shipping contact for the item&apos;s ordered on the sales order line. If left blank, the value of this field will be updated with the value of the parent sales order&apos;s &quot;Shipping Contact&quot; field.</description>
        <inlineHelpText>Optional shipping contact for the item&apos;s ordered on the sales order line. If left blank, the value of this field will be updated with the value of the parent sales order&apos;s &quot;Shipping Contact&quot; field.</inlineHelpText>
        <label>Shipping Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Country__c</fullName>
        <description>Optional shipping country for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &quot;Shipping Country&quot; field.</description>
        <inlineHelpText>Optional shipping country for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &quot;Shipping Country&quot; field.</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to select a Shipping Method associated with the Sales Order Line.</description>
        <inlineHelpText>Select the Shipping Method associated with this Sales Order Line.</inlineHelpText>
        <label>Shipping Method</label>
        <referenceTo>OrderApi__Shipping_Method__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Postal_Code__c</fullName>
        <description>Optional shipping postal code for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &apos;&quot;Shipping Postal Code&quot; field.</description>
        <inlineHelpText>Optional shipping postal code for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &apos;&quot;Shipping Postal Code&quot; field.</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_State__c</fullName>
        <description>Optional shipping state for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &quot;Shipping State&quot; field.</description>
        <inlineHelpText>Optional shipping state for the item&apos;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&apos;s &quot;Shipping State&quot; field.</inlineHelpText>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>